# AnyQ

./: AUTHORS  CMakeLists.txt  README.EN.md  README.md
cmake/: proto_build.cmake
demo/: annoy_index_build.cpp  demo_anyq.cpp  demo_anyq_multi.cpp  feature_dump.cpp  run_server.cpp
docs/: config_tutorial.md  plugin_tutorial.md  semantic_retrieval_tutorial.md
include/analysis/: analysis_strategy.h  method_interface.h  method_query_intervene.h  method_simnet_emb.h  method_wordseg.h
include/common/: common_define.h  http_client.h  paddle_thread_resource.h  plugin_factory.h  plugin_header.h  utils.h
include/dict/: dict_adapter.h  dict_interface.h  dict_manager.h  dual_dict_wrapper.h
include/matching/: matching_interface.h
include/matching/lexical/: bm25_sim.h  contain_sim.h  cosine_sim.h  edit_distance_sim.h  jaccard_sim.h  wordseg_proc.h
include/matching/semantic/: simnet_paddle_sim.h  simnet_tf_sim.h
include/rank/: rank_strategy.h
include/rank/predictor/: predictor_interface.h
include/retrieval/: retrieval_interface.h  retrieval_strategy.h
include/retrieval/manual/: manual_retrieval.h
include/retrieval/semantic/: annoylib.h  semantic_retrieval.h
include/retrieval/term/: boost_solr_q_builder.h  contain_solr_q_builder.h  date_compare_solr_q_builder.h  equal_solr_q_builder.h  solr_q_interface.h  synonym_solr_q_builder.h  term_retrieval.h
include/server/: anyq_postprocessor.h  anyq_preprocessor.h  http_server.h  http_service_impl.h  request_postprocess_interface.h  request_preprocess_interface.h  session_data_factory.h  solr_accessor.h
include/strategy/: anyq_strategy.h
proto/: anyq.proto  http_service.proto
src/analysis/: analysis_strategy.cpp  method_interface.cpp  method_query_intervene.cpp  method_simnet_emb.cpp  method_wordseg.cpp
src/common/: http_client.cpp  paddle_thread_resource.cpp  plugin_factory.cpp  utils.cpp
src/dict/: dict_adapter.cpp  dict_manager.cpp  dual_dict_wrapper.cpp  paddle_sim_adapter.cpp  tf_model_adapter.cpp  wordseg_adapter.cpp
src/matching/lexical/: bm25_sim.cpp  contain_sim.cpp  cosine_sim.cpp  edit_distance_sim.cpp  jaccard_sim.cpp  wordseg_proc.cpp
src/matching/semantic/: simnet_paddle_sim.cpp  simnet_tf_sim.cpp
src/rank/: rank_strategy.cpp
src/rank/predictor/: predict_linear_model.cpp  predict_select_model.cpp  predict_xgboost_model.cpp
src/retrieval/: retrieval_strategy.cpp
src/retrieval/manual/: manual_retrieval.cpp
src/retrieval/semantic/: semantic_retrieval.cpp
src/retrieval/term/: boost_solr_q_builder.cpp  contain_solr_q_builder.cpp  date_compare_solr_q_builder.cpp  equal_solr_q_builder.cpp  synonym_solr_q_builder.cpp  term_retrieval.cpp
src/server/: anyq_postprocessor.cpp  anyq_preprocessor.cpp  http_server.cpp  http_service_impl.cpp  session_data_factory.cpp  solr_accessor.cpp
src/strategy/: anyq_strategy.cpp
tools/: anyq_deps.sh
tools/common/: log.py  nlp_algo.py  utils.py
tools/data-format/: excel2faq.py
tools/ltr/xgboost/: feature.test  test.sh  train.sh  train_parameter.conf
tools/simnet/: README.md  predict.sh  train.sh
tools/simnet/preprocess/: op_out.py  operation_unit.py  preprocess.conf  preprocess.py  run_preprocess.sh  workflow.py
tools/simnet/preprocess/sample_data/: sample_test.txt
tools/simnet/train/paddle/: README.md  paddle_simnet.py  run_infer.sh  run_train.sh
tools/simnet/train/paddle/data/: test_pairwise_data  test_pointwise_data  train_pairwise_data
tools/simnet/train/paddle/examples/: bow_pairwise.json  bow_pointwise.json  cnn_pairwise.json  cnn_pointwise.json  gru_pairwise.json  gru_pointwise.json  lstm_pairwise.json  lstm_pointwise.json  mmdnn-pointwise.json
tools/simnet/train/paddle/layers/: paddle_layers.py
tools/simnet/train/paddle/log/: paddle.log.wf
tools/simnet/train/paddle/losses/: hinge_loss.py  log_loss.py  softmax_cross_entropy_loss.py
tools/simnet/train/paddle/nets/: bow.py  cnn.py  gru.py  lstm.py  mm_dnn.py
tools/simnet/train/paddle/optimizers/: paddle_optimizers.py
tools/simnet/train/paddle/util/: data_reader.py
tools/simnet/train/tf/: README.md  run_infer.sh  run_train.sh  tf_simnet.py
tools/simnet/train/tf/data/: convert_test_pointwise_data  convert_train_pairwise_data  convert_train_pointwise_data  test_pairwise_data  test_pointwise_data  train_pointwise_data
tools/simnet/train/tf/examples/: bow-pairwise.json  bow-pointwise.json  cnn-pairwise.json  cnn-pointwise.json  knrm-pairwise.json  knrm-pointwise.json  lstm-pairwise.json  lstm-pointwise.json  mmdnn-pairwise.json  mmdnn-pointwise.json  mvlstm-pairwise.json  mvlstm-pointwise.json  (+2 more)
tools/solr/: README.md  anyq_solr.sh  make_json.py  sample_docs  solr_api.py  solr_deply.sh  solr_tools.py
(+16 files in other folders)
